# Auto_article_production

./: .coverage  .coveragerc  .env.example  .gitignore  README.md  pytest.ini
Autopublish/: AGENTS.md  demo.py  pyproject.toml  server.py  start.sh
Autopublish/adapters/: contract.py
Autopublish/autopublish/: __init__.py  base.py  models.py  platforms.py  playwright_publisher.py  scheduler.py  social_auto_upload.py  stub.py  wechat_api.py
deploy/launchd/: com.bessie.autocontent.autopublish.plist  com.bessie.autocontent.distilled_characters.plist  com.bessie.autocontent.orchestrator.plist  com.bessie.autocontent.platform_scorer.plist  com.bessie.autocontent.select_topic.plist  com.bessie.autocontent.writing.plist
deploy/scripts/: generate_plists.py  (+2 more)
distilled_characters/: CLAUDE.md  config.py  main.py  requirements.txt  zhengliufangfa.md
docs/: DEV_PLAN.md  HLD.md  LLD.md  PRD.md  PROJECT.md
orchestrator/: __init__.py  archive.py  assets.py  cleanup.py  config_loader.py  crud.py  db.py  dedup.py  dispatch.py  final_package_validator.py  migrate.py  requirements.txt  retry.py  scheduler_v2.py  server_v2.py  start.sh  state_machine.py
platform_scorer/: server.py
scripts/: contract_check.py
select_topic/: README.md  config.py  init_db.py  main.py  requirements.txt  test_suite.py  名人热点智能匹配选题系统｜产品需求文档（PRD V1.0）.md
tests/: conftest.py
writing/: .env.bak  .env.example  .gitignore  AI写作四大超级Agent集群·最终完整版开发文档（可直接落地开发｜架构+流程+调度+全套提示词） (1).md  README.md  TEST_PLAN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  写作sub-agent提示词.md
(+2448 files in other folders)
